Add github action file to enable deployment to otc to quarano.de

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -13,14 +13,10 @@ defaults:
     shell: bash
 
 jobs:
-  build:
+  deploy:
     timeout-minutes: 15
 
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [12.x]
 
     steps:
       - uses: actions/checkout@v2
